Formatting for multiple calendars Fix alignment of header links
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@3454 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/calendar/jquery-calendar-alt.css
+++ b/plugins/calendar/jquery-calendar-alt.css
@@ -21,13 +21,6 @@
 	padding: 5px !important;
 	border: 4px ridge #88c !important;
 }
-#calendar_div a, .calendar_inline a {
-	cursor: pointer;
-	margin: 0;
-	padding: 0;
-	background: none;
-	color: #000;
-}
 button.calendar_trigger {
 	width: 25px;
 }
@@ -37,7 +30,6 @@ img.calendar_trigger {
 }
 .calendar_prompt {
 	float: left;
-	width: 181px;
 	padding: 2px;
 	xbackground: #d8d8d8 url(img/dark-bg.gif) repeat;
 	background: transparent;
@@ -46,43 +38,41 @@ img.calendar_trigger {
 * html .calendar_prompt {
 	width: 185px;
 }
-#calendar_div, .calendar_control, .calendar_links, .calendar_header, .calendar {
+.calendar_control, .calendar_links, .calendar_header, .calendar {
 	clear: both;
 	float: left;
-	width: 205px;
+	width: 100%;
 }
 .calendar_control, .calendar_links {
 	font-weight: bold;
 	font-size: 80%;
 	letter-spacing: 1px;
 }
-.calendar_control a, .calendar_links a {
-	padding: 2px 5px !important;
-}
-.calendar_control a:hover {
-	background: #9dbae1 url(img/hover-bg.gif) repeat !important;
-}
-.calendar_links a:hover, .calendar_titleRow a:hover {
-	background: #9dbae1 url(img/hover-bg.gif) repeat !important;
-}
+
 .calendar_links label { /* disabled links */
 	padding: 2px 5px;
 	color: #88c;
 }
 .calendar_clear, .calendar_prev {
 	float: left;
+	width: 34%;
 }
 .calendar_current {
 	float: left;
-	width: 45%;
+	width: 30%;
 	text-align: center;
 }
 .calendar_close, .calendar_next {
 	float: right;
+	width: 34%;
+	text-align: right;
 }
 .calendar_header {
+	padding: 1px 0 3px;
+
 	text-align: center;
 	font-weight: bold;
+	height: 1.3em;
 }
 .calendar_header select {
 	background: #d8d8d8 url(img/dark-bg.gif) repeat;
@@ -118,6 +108,29 @@ img.calendar_trigger {
 .calendar_currentDay {
 	background: #3c75c4 url(img/active-bg.gif) repeat;
 }
+
+/* ________ CALENDAR LINKS _______
+
+** Reset link properties and then override them with !important */
+#calendar_div a, .calendar_inline a {
+	cursor: pointer;
+	margin: 0;
+	padding: 0;
+	background: none;
+	color: #000;
+}
+.calendar_control a, .calendar_links a {
+	padding: 2px 5px !important;
+}
+.calendar_control a:hover {
+	background: #9dbae1 url(img/hover-bg.gif) repeat !important;
+}
+.calendar_links a:hover, .calendar_titleRow a:hover {
+	background: #9dbae1 url(img/hover-bg.gif) repeat !important;
+}
+
+/* ___________ IE6 IFRAME FIX ________ */
+
 .calendar_cover {
     display: none; /*sorry for IE5*/
     display/**/: block; /*sorry for IE5*/
@@ -126,6 +139,6 @@ img.calendar_trigger {
     filter: mask(); /*must have*/
     top: -4px; /*must have*/
     left: -4px; /*must have*/
-    width: 213px; /*must have to match width and borders*/
-    height: 210px; /*must have to match maximum height*/ 
+    width: 200px; /*must have*/
+    height: 200px; /*must have*/
 }
